Enforce role-based incident access control